[package]
name = "pop-cosmic"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cc = "1.0.69"

[dependencies]
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
env_logger = "0.9.0"
evdev = "0.11.0"
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.100"
log = "0.4.14"
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pop-launcher = { git = "https://github.com/pop-os/launcher" }
serde_json = { version = "1.0", default-features = false }

[dependencies.clutter]
path = "mutter-rs/clutter"
features = ["v1_10"]

[dependencies.clutter-sys]
path = "mutter-rs/clutter-sys"
features = ["v1_10"]

[dependencies.gdesktop_enums]
path = "mutter-rs/gdesktop_enums"

[dependencies.meta]
path = "mutter-rs/meta"

[dependencies.meta-sys]
path = "mutter-rs/meta-sys"
